--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "server app ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
